<resources>
    <string name="app_name">手游视界</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mission_more">MissionMoreActivity</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_video_play">VideoPlayActivity</string>
    <string name="title_activity_gift_detail">GiftDetailActivity</string>
    <string name="title_activity_transcribe">TranscribeActivity</string>
    <string name="title_activity_personal">PersonalActivity</string>
    <string name="title_activity_assort">AssortActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_personal_info">PersonalInfoActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_bussiness">BussinessActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_feed_back_content">FeedBackContentActivity</string>
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="title_activity_down_load">DownLoadActivity</string>
    <string name="title_activity_new_assort">NewAssortActivity</string>
    <string name="title_activity_collect">CollectActivity</string>
    <string name="title_activity_transcribe_upload">TranscribeUploadActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_protect">ProtectActivity</string>
    <string name="title_activity_set_name">SetNameActivity</string>
    <string name="title_activity_upload_video">UploadVideoActivity</string>
    <string name="title_activity_my_gift">MyGiftActivity</string>
    <string name="fm_app_name">超级录录</string>
    <string name="fm_str_text">更改文件名为：</string>
    <string name="fm_app_name_pro">录屏专业版</string>
    <string name="fm_open_using">请选择应用打开</string>
    <string name="fm_file_no_data">没有可用的文件</string>
    <string name="fm_my_feed">我的反馈</string>
    <string name="fm_my_feed_has_reply">您的反馈收到回复</string>
    <string name="fm_back">返回</string>
    <string name="fm_input_your_comment">请输入您的评论&amp;反馈</string>
    <string name="fm_submit">提交</string>
    <string name="fm_name">姓名</string>
    <string name="fm_tip">提示</string>
    <string name="fm_mobile">手机</string>
    <string name="fm_system_setting">系统设置</string>
    <string name="fm_display_method">显示方式</string>
    <string name="fm_about_slogan">我们的专注只为了您有更好的体验</string>
    <string name="fm_everything_you_want_write_here">拼凑零碎时间，移动改变生活。</string>
    <string name="fm_work_group_name">Hiandroid工作室</string>
    <string name="fm_setting_feedback_bugs">反馈软件问题</string>
    <string name="fm_setting_check_update">检查更新</string>
    <string name="fm_setting_about">关于</string>
    <string name="fm_faq">常见问题</string>
    <string name="fm_version_mark">Release</string>
    <string name="fm_already_download">下载中</string>
    <string name="fm_buy_no_ad_version">购买专业版</string>
    <string name="fm_cant_buy_no_google_play">您可以从Google Play专业版本。</string>
    <string name="fm_error">错误</string>
    <string name="fm_screenshot_setting">录制屏幕设置</string>
    <string name="fm_screenshot_setting_1">基本设置</string>
    <string name="fm_hide_notify_screenshot">隐藏通知栏</string>
    <string name="fm_show_notify_item_in_notify_bar">隐藏通知栏显示的录屏栏</string>
    <string name="fm_falter_screenshot">通过摇晃录屏</string>
    <string name="fm_cancel_record_sound">录制声音</string>
    <string name="fm_falter_screenshot_tip">摇晃开始和停止录屏</string>
    <string name="fm_cancel_record_sound_tip">选择是否录制声音</string>
    <string name="fm_play_screenshot_sound">取消播放软件声音</string>
    <string name="fm_play_screenshot_sound_tip">取消播放录屏软件声音</string>
    <string name="fm_bak_record_channel">使用备用通道</string>
    <string name="fm_bak_record_channel_tip">正常录制不成功时选择</string>
    <string name="fm_explorer_and_storage">录制设置</string>
    <string name="fm_screenshot_pic_explorer">视频存放地址</string>
    <string name="fm_help_and_about">帮助和关于</string>
    <string name="fm_about_mine">关于我们</string>
    <string name="fm_about__tip">Hiandroid工作室</string>
    <string name="fm_how_to_use_this_app">使用帮助</string>
    <string name="fm_how_to_use_this_app_tip">如何使用本软件</string>
    <string name="fm_buy_from_google_play">从Google Play购买无限制全功能专业版</string>
    <string name="fm_take_anywhere_to_screenshot">录制屏幕提示</string>
    <string name="fm_screenshot_done">完成</string>
    <string name="fm_screenshot_tuya">涂鸦</string>
    <string name="fm_full_screenshot">开始录屏</string>
    <string name="fm_screenshot_cancel">取消</string>
    <string name="fm_screenshot_started">启动录屏服务</string>
    <string name="fm_click_start_screenshot">录屏服务已启动</string>
    <string name="fm_screenshot_failure">截图失败。</string>
    <string name="fm_your_mobile_no_root">您的手机没有Root</string>
    <string name="fm_root_your_mobile">Root本手机</string>
    <string name="fm_inner_app_shot">应用内截图</string>
    <string name="fm_screenshot_save_success">保存成功。</string>
    <string name="fm_explorer_screenshot">录屏预览</string>
    <string name="fm_downloading">下载中…</string>
    <string name="fm_new_function_index">新功能导航</string>
    <string name="fm_login_and_taste">进入体验</string>
    <string name="fm_action_bar_share_with">Share With</string>
    <string name="fm_download_done_installing">下载完成，正在安装…</string>
    <string name="fm_no_sdcard_cant_download_and_install">没有SDCard，不能下载安装APK文件。</string>
    <string name="fm_start_download">开始下载.</string>
    <string name="fm_downloading_done_per">正在下载，已完成</string>
    <string name="fm_perhaps_download_please_wait">准备下载中，请稍后…</string>
    <string name="fm_you_need_root">您需要获得Root权限才能使用本软件。</string>
    <string name="fm_app_root">申请权限</string>
    <string name="fm_rotation">旋转</string>
    <string name="fm_enlarge">放大</string>
    <string name="fm_narrow">缩小</string>
    <string name="fm_save">保存</string>
    <string name="fm_share_to_email_title">来自Android版ScreenREC的录屏分享</string>
    <string name="fm_share_def_content">
        <![CDATA[<a href="http://www.hianzuo.com/ScreenREC" target="_blank">ScreenREC</a> 用户给您分享了一段录屏视频。]]>
    </string>
    <string name="fm_about_root_phone">关于Root手机</string>
    <string name="fm_about_i_screenshot">关于ScreenREC</string>
    <string name="fm_setting_check_update_tip">获取最新版本</string>
    <string name="fm_vote_comment_tip">喜欢就投我们一票吧。谢谢！</string>
    <string name="fm_vote_comment_btn">投票及评论</string>
    <string name="fm_test_version_label">发布版本：</string>
    <string name="fm_version_your_is_new">你的应用程序是最新的</string>
    <string name="fm_version_label">版本代码：</string>
    <string name="fm_version_checking">检查中…</string>
    <string name="fm_version_new_found">一个新的版本被发现</string>
    <string name="fm_version_update">更新</string>
    <string name="fm_version_you_must_update">您必须更新最新版本</string>
    <string name="fm_confirm_exit">你确定要退出这个程序？</string>
    <string name="fm_your_network_unavailable">你的网络不可用</string>
    <string name="fm_sure">确定</string>
    <string name="fm_cancel">取消</string>
    <string name="fm_loading">载入中…</string>
    <string name="fm_setting_network">网络设置</string>
    <string name="UMEmptyFbNotAllowed">请输入您的反馈意见。</string>
    <string name="UMContentTooLong">您的内容超过140个字符。</string>
    <string name="UMFbList_ListItem_State_ReSend">失败，请重新发送</string>
    <string name="UMFbList_ListItem_State_Sending">发送…</string>
    <string name="UMFbList_ListItem_State_Resending">重发</string>
    <string name="UMFbList_ListItem_State_Fail">失败</string>
    <string name="UMFb_Atom_State_Fail">失败</string>
    <string name="UMFb_Atom_State_Sending">发送…</string>
    <string name="UMFb_Atom_State_Resend">失败，请重新发送，这将</string>
    <string name="UMFeedbackUmengTitle">反馈</string>
    <string name="UMFeedbackListTitle">我要留言</string>
    <string name="UMFeedbackConversationTitle">我要留言</string>
    <string name="UMFeedbackTitle">你写的每一个字，将有利于我们。</string>
    <string name="UMFeedbackContent">输入您的建议，在这里</string>
    <string name="UMFeedbackSummit">提交</string>
    <string name="UMFeedbackGoBack">返回</string>
    <string name="UMFeedbackGotIt">明白了</string>
    <string name="UMFeedbackSeeDetail">详细</string>
    <string name="UMViewThread">查看主题</string>
    <string name="UMNewReplyAlertTitle">您已经得到了回复</string>
    <string name="UMDeleteThread">删除主题</string>
    <string name="UMViewFeedback">查看留言</string>
    <string name="UMDeleteFeedback">删除反馈</string>
    <string name="UMResendFeedback">重新发送反馈</string>
    <string name="UMDeleteMsg">删除邮件</string>
    <string name="UMNewReplyFlick">有新的回复</string>
    <string name="UMNewReplyTitle">有新的回复</string>
    <string name="UMNewReplyHint">点击查看</string>
    <string-array name="UMgenderList">
        <item>性别</item>
        <item>男士</item>
        <item>女士</item>
    </string-array>
    <string-array name="UMageList">
        <item>年龄</item>
        <item>&lt;18</item>
        <item>18~24</item>
        <item>25~30</item>
        <item>31~35</item>
        <item>36~40</item>
        <item>41~50</item>
        <item>51~59</item>
        <item>>=60</item>
    </string-array>
    <string name="fm_more_item_select_color">选择颜色</string>
    <string name="fm_more_item_select_transparent">选择透明度</string>
    <string name="fm_more_item_select_line_weight">选择线条粗细</string>
    <string name="fm_more_item_title">更多</string>
    <string name="fm_more_item_emboss">浮雕</string>
    <string name="fm_more_item_blur">模糊</string>
    <string name="fm_more_item_set_blur_value">设置模糊值</string>
    <string name="fm_more_item_erase">擦除</string>
    <string name="fm_please_select_transparent">请选择透明值</string>
    <string name="fm_please_select_line_weight">请选择线条粗细</string>
    <string name="fm_save_image_format">录制视频大小选择</string>
    <string name="fm_image_format_summary">默认为屏幕大小</string>
    <string name="fm_image_compress">视频质量</string>
    <string name="fm_image_compress_1">声音视频同步调节</string>
    <string name="fm_please_select_image_compress">请选择压缩比例</string>
    <string name="fm_please_select_blur_value">请选择模糊值</string>
    <string name="fm_float_screenshot">浮动按钮</string>
    <string name="fm_float_screenshot_tip">显示上一个截图按钮在屏幕上</string>
    <string name="fm_modify_path">修改路径</string>
    <string name="fm_select_all">全选</string>
    <string name="fm_delete_all">全部清除</string>
    <string name="fm_paint">涂鸦</string>
    <string name="fm_gen_video_tip">生成视频提示</string>
    <string name="fm_run_back">后台执行</string>
    <string name="fm_gen_video_ing_1">正在合成视频文件中，请稍后…</string>
    <string name="fm_quality_of_video">录制视频画质选择</string>
    <string name="fm_quality_of_video_tip">默认标准，请按机器性能合理选择</string>
    <string name="fm_where_use">视频帧率选择</string>
    <string name="fm_where_use_tip">选择不同的视频帧率,默认15fps</string>
    <string name="fm_video_quality">视频质量选择</string>
    <string name="fm_video_quality_tip">选择以控制录制文件大小和视频质量</string>
    <string name="fm_audio_quality">声音质量选择</string>
    <string name="fm_audio_quality_tip">选择以控制文件大小和声音质量</string>
    <string name="fm_video_encoder">视频解码器选择</string>
    <string name="fm_video_encoder_tip">录制的视频效果不好时，请选择</string>
</resources>