<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="#f1f1f1"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            >
        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fm_gen_video_tip"
                android:textSize="20sp"
                android:textColor="@color/blue1"
                />
    </LinearLayout>
    <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@color/blue1"
            />
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            >
        <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:textSize="16sp"
                android:textColor="@color/gray4"
                android:text="@string/fm_gen_video_ing_1"/>
        <ProgressBar
                android:id="@+id/seek_bar"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/rc_hc_seek_bar_bg"
                style="?android:attr/progressBarStyleHorizontal"
                android:thumb="@android:color/transparent"
                android:visibility="visible"
                android:focusable="false"
                android:clickable="false"
                />
        <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dip"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/gray1"
                />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                >
            <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/fm_run_back"
                    android:textSize="18sp"
                    android:textColor="@color/gray4"
                    style="@style/borderlessButtonStyle"
                    />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>