<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#333333"
        >
    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
        <com.fmscreenrecorder.crop.CropImageView
                android:id="@+id/crop_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusable="true"
                android:clickable="true"
                />
    </FrameLayout>
    <com.fmscreenrecorder.TouchView
            android:id="@+id/my_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:visibility="gone"
            />
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            >
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:id="@+id/tuya_area"
                android:background="#30ffffff"
                android:visibility="gone"
                >
            <ImageButton
                    android:id="@+id/more"
                    android:layout_width="48dip"
                    android:layout_height="48dip"
                    style="@style/borderlessButtonStyle"
                    />
            <ImageButton
                    android:id="@+id/pen_100"
                    android:layout_width="42dip"
                    android:layout_height="42dip"
                    android:src="@drawable/sn_pen_100"
                    style="@style/borderlessButtonStyle"
                    />
            <ImageButton
                    android:id="@+id/pen_85"
                    android:layout_width="38dip"
                    android:layout_height="38dip"
                    android:src="@drawable/sn_pen_85"
                    style="@style/borderlessButtonStyle"
                    />
            <ImageButton
                    android:id="@+id/pen_70"
                    android:layout_width="42dip"
                    android:layout_height="42dip"
                    android:src="@drawable/sn_pen_70"
                    style="@style/borderlessButtonStyle"
                    />
            <ImageButton
                    android:id="@+id/pen_55"
                    android:layout_width="42dip"
                    android:layout_height="42dip"
                    android:src="@drawable/sn_pen_55"
                    style="@style/borderlessButtonStyle"
                    />
            <ImageButton
                    android:id="@+id/pen_40"
                    android:layout_width="42dip"
                    android:layout_height="42dip"
                    android:src="@drawable/sn_pen_40"
                    style="@style/borderlessButtonStyle"
                    />
            <ImageButton
                    android:id="@+id/pen_25"
                    android:layout_width="42dip"
                    android:layout_height="42dip"
                    android:src="@drawable/sn_pen_25"
                    style="@style/borderlessButtonStyle"
                    />
            <!-- <ImageButton
                     android:id="@+id/transparent"
                     android:layout_width="38dip"
                     android:layout_height="38dip"
                     android:src="@drawable/sn_transparent"
                     style="@style/borderlessButtonStyle"
                     />-->
        </LinearLayout>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#30ffffff"
                android:gravity="center_vertical"
                >
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_gravity="bottom"
                    >
                <Button
                        android:id="@+id/crop_rotate_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/mjkf_crop_btn"
                        android:textColor="#33b5e5"
                        android:text="@string/fm_rotation"
                        android:visibility="gone"
                        />
                <Button
                        android:id="@+id/actual_size_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fm_paint"
                        />
                <Button
                        android:id="@+id/crop_big_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fm_enlarge"
                        />
                <Button
                        android:id="@+id/crop_small_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fm_narrow"
                        />
            </LinearLayout>

            <Button
                    android:id="@+id/crop_crop_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="30dip"
                    android:text="@string/fm_save"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dip"
                    />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>

